# euler

./: .gitignore  Main.hs  README.md  README.org  TestSuite.hs  cabal.config  create-spec.sh  euler.cabal  install.sh
Euler/: Formulae.hs  Numbers.hs  P001.hs  P002.hs  P003.hs  P004.hs  P005.hs  P006.hs  P007.hs  P008.hs  P009.hs  P010.hs  P011.hs  P012.hs  P013.hs  P014.hs  P015.hs  P016.hs  P017.hs  P018.hs  P019.hs  P020.hs  P021.hs  P022.hs  P023.hs  P024.hs  P025.hs  P026.hs  P027.hs  P028.hs  P029.hs  P030.hs  P031.hs  P032.hs  P033.hs  P034.hs  P035.hs  P036.hs  P037.hs  P038.hs  (+29 more)
executable/: Main.hs
executable/Euler/: P001.hs  P002.hs  P003.hs  P004.hs  P005.hs  P006.hs  P007.hs  P008.hs  P009.hs  P010.hs  P011.hs  P012.hs  P013.hs  P014.hs  P015.hs  P016.hs  P017.hs  P018.hs  P019.hs  P020.hs  P021.hs  P022.hs  P023.hs  P024.hs  P025.hs  P026.hs  P027.hs  P028.hs  P029.hs  P030.hs  P031.hs  P032.hs  P033.hs  P034.hs  P035.hs  P036.hs  P037.hs  P038.hs  P039.hs  P040.hs  (+25 more)
test-suite/Euler/: P001Spec.hs  P002Spec.hs  P003Spec.hs  P004Spec.hs  P005Spec.hs  P006Spec.hs  P007Spec.hs  P008Spec.hs  P009Spec.hs  P010Spec.hs  P011Spec.hs  P012Spec.hs  P013Spec.hs  P014Spec.hs  P015Spec.hs  P016Spec.hs  P017Spec.hs  P018Spec.hs  P019Spec.hs  P020Spec.hs  P021Spec.hs  P022Spec.hs  P023Spec.hs  P024Spec.hs  P025Spec.hs  P026Spec.hs  P027Spec.hs  P028Spec.hs  P029Spec.hs  P030Spec.hs  P031Spec.hs  P032Spec.hs  P033Spec.hs  P034Spec.hs  P035Spec.hs  P036Spec.hs  P037Spec.hs  P038Spec.hs  P039Spec.hs  P040Spec.hs  (+26 more)
