name:                   euler
version:                0.0.1
synopsis:               Fun solving riddles on https://projecteuler.net
license:                PublicDomain
license-file:           LICENSE
author:                 Sebastian Witte
maintainer:             woozeltoff@gmail.com

category:               Fun

build-type:             Simple

data-files:             text/P008.txt, text/P011.txt, text/P013.txt,
                        text/P018.txt, text/names.txt, text/poker.txt,
                        text/words.txt

cabal-version:          >=1.8

executable euler
  main-is:              Main.hs
  hs-source-dirs:       executable

  build-depends:        base ==4.6.*, mtl ==2.1.*, containers ==0.5.*,
                        vector ==0.10.*, optparse-applicative ==0.8.*,
                        euler

library
  hs-source-dirs:       library

  exposed-modules:      Euler.Formulae, Euler.Numbers, Euler.Prime, Euler.SList

  build-depends:        base ==4.6.*, mtl ==2.1.*, containers ==0.5.*,
                        vector ==0.10.*, primitive

  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

test-suite all-tests
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test-suite, library, executable
  main-is:              Spec.hs

  build-depends:        base ==4.6.*, mtl ==2.1.*, containers ==0.5.*,
                        vector ==0.10.*, hspec ==1.*, QuickCheck >=2.6

  cpp-options:          -DHTEST
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N

